src/App.css
:root {
	--instructure: #0E1721;
	--ai-gradient: linear-gradient(to bottom, #00828e, #9e58bd);

	background-color: var(--instructure);
	color: #fff;
}

body {
	display: grid;
}

.logoWrapper {
	border-image-source: var(--ai-gradient);
	border-image-slice: 1;
	border-image-width: 1em;
	border-image-outset: 0;
}

#signupForm {
	background: var(--ai-gradient);
}

